@@ -152,6 +152,7 @@ cat <<EOF |
   IBM1162
   IBM1163
   IBM1164
+  CP1125
   CP1250
   CP1251
   CP1252
