@@ -1,3 +1,12 @@
+2002-12-03  Roland McGrath  <roland@redhat.com>
+
+	* iconvdata/cp1125.c: New file.
+	* iconvdata/Makefile (distribute): Add it.
+	(modules): Add CP1125.
+	(gen-8bit-gap-modules): Add cp1125.
+	* iconvdata/gconv-modules: Add CP1125, alias RUSCII.
+	* iconvdata/tst-tables.sh: Add CP1125 to the list to test.
+
 2002-12-03  Andreas Jaeger  <aj@suse.de>
 
 	* sysdeps/x86_64/fpu/libm-test-ulps: Regenerated.
